--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,7 +278,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/template2.jpg") top center;
+  background: url("../img/DetroitAirport.jpeg") top center; 
   background-size: cover;
 }
 
